--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -28,7 +28,7 @@ const backUrl = SITE.showBackButton ? Astro.url.pathname : "/";
 >
   {
     "titleTransition" in props ? (
-      <h1 class="text-2xl font-semibold sm:text-3xl">
+      <h1 class="<h1 class="text-lg font-medium sm:text-xl">{props.pageTitle}</h1>"
         {props.pageTitle[0]}
         <span transition:name={props.titleTransition}>
           {props.pageTitle[1]}
