--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -41,7 +41,7 @@ const isActive = (path: string) => {
     >
       <a
         href="/"
-        class="absolute py-1 text-xl leading-8 font-semibold whitespace-nowrap sm:static sm:my-auto sm:text-2xl sm:leading-none"
+        class="absolute py-1 text-base leading-6 font-semibold whitespace-nowrap sm:static sm:my-auto sm:text-xl sm:leading-tight""
       >
         {SITE.title}
       </a>
